--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+	overflow-y: auto;
+}
+
 canvas{
 	position: fixed;
 	top:0;
@@ -5,61 +9,39 @@ canvas{
 	z-index: -1;
 }
 
-#content{
-	position: relative;
-	z-index: 2;
-}
-#box{
-	position: fixed;
-	text-align: center;
-  	top: 50%;
-  	left: 50%;
-  	/* bring your own prefixes */
-  	transform: translate(-50%, -50%); 
-  	background:transparent;
-	z-index: 3;
-
-}
 h1{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 9vw;
-	color: black;
-	opacity: 1;
+	font-weight: 300;
+	font-size: 12vw;
+	color: #000000;
 	z-index: 10;
-	margin-top: 10px;
-	padding: 0;
-	margin:0;
+	margin-top: 300px;
+	margin-bottom: 5px;
 }
-h2, {
-	font-family: 'Open Sans Condensed', sans-serif;
-	text-align: center;
-	font-size: 3vw;
-	color: black;
-	opacity: 1;
-	z-index: 10;
-	margin-top: 10px;
-}
+
 p{
 	font-family: 'Open Sans Condensed', sans-serif;
-	text-align: left;
+	font-weight: 300;
+	text-align: justify;
 	font-size: 2vw;
-	color: black;
-	opacity: 1;
+	color: #000000;
 	z-index: 10;
-	margin-top: 10px;
+	margin-left: 9vw;
+	margin-right: 9vw;
 }
 
 button{
 	background:none;
 	display: inline-block;
-	border:none;
-	text-align: right;
+	border: none;
 	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: 300;
 	font-size: 3vw;
-	color: black;
+	color: #000000;
 	z-index: 10;
-	margin-left: auto;
-    margin-right: auto;
+}
 
+#buttons {
+	text-align: center;
 }
