--- a/style.css
+++ b/style.css
@@ -45,3 +45,18 @@ button{
 #buttons {
 	text-align: center;
 }
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 25%;
+  padding: 5px;
+}
+
+ /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
+  }
+} 
