--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ button{
 		padding-right: 9vw;
 }
 
+#hackerCarousel {
+    padding-left: 9vw;
+		padding-right: 9vw;
+}
+
 .carousel-control.left, .carousel-control.right {
 	background-image: none;
 	padding-left: 13vw;
