--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ button{
 #artistCarousel {
     padding-left: 9vw;
 		padding-right: 9vw;
+		padding-bottom: 9vw;
 }
 
 #hackerCarousel {
     padding-left: 9vw;
 		padding-right: 9vw;
+		padding-bottom: 9vw;
 }
 
 .carousel-control.left, .carousel-control.right {
